# shokz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  LICENSE  README.md  RETRO.md  pyproject.toml  shokz.toml.example
.claude/plan/: shokz-downloader.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  nightly-ytdlp.yml
docs/sprints/: _template.md  sprint-0.md  sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.5.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-7.md  sprint-8.5.md  sprint-8a.md  sprint-8b.md
poc/: poc.py
scripts/: code-review.sh  kill-test.sh  sprint-review.sh
src/shokz/: __init__.py  composition.py
src/shokz/adapters/: __init__.py
src/shokz/adapters/inbound/: __init__.py
src/shokz/adapters/inbound/cli/: __init__.py  _runtime.py  _summary.py  app.py
src/shokz/adapters/inbound/cli/commands/: __init__.py  config_cmd.py  doctor.py  download.py  library_cmd.py  playlist.py  retry.py  split.py
src/shokz/adapters/outbound/: __init__.py  ffmpeg_encoder.py  jsonl_manifest.py  local_filesystem.py  null_progress.py  ytdlp_source.py
src/shokz/application/: __init__.py
src/shokz/application/policies/: __init__.py  disk_guard.py  file_lock.py  filename_resolver.py  reconciliation.py  retry.py  skip_existing.py
src/shokz/application/ports/: __init__.py
src/shokz/application/ports/outbound/: __init__.py  encoder.py  filesystem.py  manifest.py  progress.py  video_source.py
src/shokz/application/use_cases/: __init__.py  batch_download.py  doctor.py  expand_playlist.py  library_query.py  retry_failed.py  split_audio.py
src/shokz/config/: __init__.py  defaults.py  loader.py  presets.py  schema.py
src/shokz/domain/: __init__.py  errors.py  filenames.py  models.py  paths.py  presets.py  split_parts.py
src/shokz/observability/: __init__.py  logging.py
tests/: conftest.py  fakes.py  test_smoke.py
tests/acceptance/: test_sprint_1_download.py  test_sprint_2_filenames.py  test_sprint_3_config.py  test_sprint_4_5_library.py  test_sprint_4_atomic.py  test_sprint_5_playlists.py  test_sprint_7_retry.py  test_sprint_8_5_retry.py  test_sprint_8b_lock_signal_disk.py
tests/unit/: test_cli_runtime.py  test_cli_smoke.py
tests/unit/adapters/: test_enospc_translations.py  test_ffmpeg_encoder_segment.py  test_jsonl_manifest.py  test_local_filesystem.py  test_ytdlp_error_translation.py
tests/unit/application/: test_batch_download.py  test_disk_guard_policy.py  test_doctor.py  test_expand_playlist.py  test_file_lock_policy.py  test_filename_resolver.py  test_reconciliation.py  test_retry_failed.py  test_retry_policy.py  test_skip_existing.py  test_split_audio.py
tests/unit/config/: test_loader.py  test_schema.py
tests/unit/domain/: test_errors.py  test_filenames.py  test_split_parts.py
