[project]
name = "shokz"
version = "0.0.0"
description = "YouTube to MP3 downloader for Shokz swimming headphones"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [{ name = "shokz developer" }]
keywords = ["youtube", "mp3", "downloader", "shokz", "swimming"]

dependencies = [
    "yt-dlp>=2026.3.17,<2027",
    "typer>=0.12,<1.0",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "tomli-w>=1.0,<2",
    "pathvalidate>=3.2,<4",
    "tenacity>=9.0,<10",
    "filelock>=3.16,<4",
    "humanfriendly>=10.0,<11",
    "platformdirs>=4.2,<5",
    "rich>=13.7,<15",
    "mutagen>=1.47,<2",
]

[project.scripts]
shokz = "shokz.adapters.inbound.cli.app:run"

[project.urls]
Homepage = "https://github.com/yourusername/shokz"
Repository = "https://github.com/yourusername/shokz"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shokz"]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "time-machine>=2.14,<3",
    "pre-commit>=3.7,<5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "S",
    "N",
    "PT",
    "RUF",
]
ignore = [
    "S101",
    "S603",
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"poc/**/*.py" = ["ALL"]
# Typer commands: B008 false-positive — typer.Argument/Option in defaults IS the documented Typer pattern.
"src/shokz/adapters/inbound/cli/commands/**/*.py" = ["B008"]
# Domain errors: N818 (Error suffix) intentionally violated — taxonomy uses
# short PascalCase names per plan §7 (SourceUnavailable, DownloadFailed, etc.).
"src/shokz/domain/errors.py" = ["N818"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
files = ["src/shokz"]
exclude = ["poc/", "build/"]

[[tool.mypy.overrides]]
module = ["mutagen.*", "humanfriendly.*", "filelock.*", "pathvalidate.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Coverage scoped to layers with unit tests; adapters via integration tests.
    "--cov=src/shokz/domain",
    "--cov=src/shokz/application",
    "--cov=src/shokz/observability",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "integration: tests that hit real yt-dlp / network (gated by INTEGRATION=1)",
    "slow: tests that take more than a few seconds",
]

[tool.coverage.run]
# Per plan §0: 80% gate scoped to layers covered by unit tests.
# Adapters use INTEGRATION=1-gated tests (not counted here).
source = ["src/shokz/domain", "src/shokz/application", "src/shokz/observability"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
show_missing = true
skip_covered = false
